fixed list drag gap

--- a/src/assets/scss/cmps/_ing-list.scss
+++ b/src/assets/scss/cmps/_ing-list.scss
@@ -24,6 +24,6 @@
 }
 
 .gap {
-    height: 133px;
+    // height: 133px;
     // background-color: red;
 }
